Fix home button still visible even while hidden

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1019,7 +1019,7 @@ html.swal2-height-auto {
 	#navbar > #breadcumb {
 		display: inline-flex;
 		min-width: 0;
-		padding-left: 4px;
+		margin-left: 4px;
 	}
 
 	#navbar > #breadcumb > #title-container,
